k8s-apps/kubeclarity/manifests/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubeclarity
  namespace: kubeclarity
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`kubeclarity.127.0.0.1.nip.io`)
    kind: Rule
    services:   
    - kind: Service 
      name: kubeclarity-kubeclarity
      port: 8080
